<?xml version="1.0" encoding="utf-8"?>
<!-- Please read info.txt for license and legal information -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayoutVerticalWithPadding" >

    <LinearLayout style="@style/llTitel" >

        <Button
            android:id="@+id/buttonBack"
            style="@style/buttonBack" />

        <TextView
            style="@style/defaultFontTitle"
            android:text="@string/titelUpdateFood" />

        <Button
            style="@style/buttonForward"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            style="@style/defaultFontNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name" />

        <Button
            android:id="@+id/buttonName"
            style="@style/defaultFontNormal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorBackgroundTrackingDateLighter" >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_menu_add" />

        <TextView
            style="@style/defaultFontTitle"
            android:text="@string/units" />
        
         <Button
            style="@style/buttonForward"
            android:visibility="invisible" />
    </LinearLayout>

    <ListView
        android:id="@+android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:cacheColorHint="#00000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/buttonDelete"
            style="@style/buttonTrashCan"
            android:layout_gravity="bottom|right"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>